--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Aprendiendo GIT
 description: > # this means to ignore newlines until "baseurl:"
   Espacio colaborativo para dejar constancia de lo que vamos aprendiendo de forma colaborativa sobre este software.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/git/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
